--- a/WxDwelling/pages/track/track.wxml
+++ b/WxDwelling/pages/track/track.wxml
@@ -3,35 +3,27 @@
 <view class="swiper-tab">
     <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab" >我的收藏</view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">我的足迹</view>
-
-
 </view>
-
-
-
-
 <swiper current="{{currentTab}}" duration="300"  bindchange="swiperTab" style="height: 1000px;">
-
-
 <!--我的收藏-->
  <swiper-item >
 <view>
 <view class="txt">
-<text>共关注了n套房 编辑</text>
+<text>共关注了{{collectListCount}}套房</text>
 </view>
 
 <scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollHandle" lower-threshold="50" bindscrolltolower="scrollLoading">
 		<view class="service-list">
-			<navigator class="service-item" wx:for="{{servicelist}}" wx:key="{{item.id}}" url="../details/details?id={{item.id}}">
+			<navigator class="service-item" wx:for="{{collectList}}" wx:key="{{item.House_ID}}" url="../details/details?ID={{item.House_ID}}">
 				<view class="service-img">
-					<image src="{{item.imgurl}}" mode="aspectFill"></image>
+					<image src="http://localhost:55909/Content/Img/{{item.House_ImgUrl}}" mode="aspectFill"></image>
 				</view>
 				<view class="service-text">
-					<view class="service-tite">{{item.name}}</view>
+					<view class="service-tite">{{item.House_Name}}</view>
 					<view class="service-tags">
-						<text>{{item.tag}}</text>
+						<text>{{item.House_RentMoney}}每月</text>
 					</view>
-					<text class="service-city">服务城市：{{item.city}}</text>
+					<text class="service-city">出租类型:{{item.LeaseType_Name}}</text>
 				</view>
 			</navigator>
 		</view>
@@ -45,21 +37,21 @@
  <swiper-item >
 <view>
 <view class="txt">
-<text >您共浏览了n套房</text>
+<text >您共浏览了{{trackListCount}}套房</text>
 </view>
 
 <scroll-view class="container-body" scroll-y="true" scroll-top="{{scrolltop}}" bindscroll="scrollHandle" lower-threshold="50" bindscrolltolower="scrollLoading">
 		<view class="service-list">
-			<navigator class="service-item" wx:for="{{servicelist}}" wx:key="{{item.id}}" url="../details/details?id={{item.id}}">
+			<navigator class="service-item" wx:for="{{trackList}}" wx:key="{{item.House_ID}}" url="../details/details?ID={{item.House_ID}}">
 				<view class="service-img">
-					<image src="{{item.imgurl}}" mode="aspectFill"></image>
+					<image src="http://localhost:55909/Content/Img/{{item.House_ImgUrl}}" mode="aspectFill"></image>
 				</view>
 				<view class="service-text">
-					<view class="service-tite">{{item.name}}</view>
+					<view class="service-tite">{{item.House_Name}}</view>
 					<view class="service-tags">
-						<text>{{item.tag}}</text>
+						<text>{{item.House_RentMoney}}每月</text>
 					</view>
-					<text class="service-city">服务城市：{{item.city}}</text>
+					<text class="service-city">出租类型:{{item.LeaseType_Name}}{{item.city}}</text>
 				</view>
 			</navigator>
 		</view>
