--- a/WxDwelling/pages/userpage/userpage.wxml
+++ b/WxDwelling/pages/userpage/userpage.wxml
@@ -30,6 +30,10 @@
         <image src=""/>投诉与建议
         <text class="jump">〉</text>
     </view>
+     <view class="item" bindtap="message" >
+        <image src=""/>消息
+        <text class="jump">〉</text>
+    </view>
     <view class="item" bindtap="address">
         <image src=""/>关于我们
         <text class="jump">〉</text>
