--- a/WxDwelling/pages/homeissueone/homeissueone.wxml
+++ b/WxDwelling/pages/homeissueone/homeissueone.wxml
@@ -85,14 +85,14 @@
         
     </checkbox-group>
 <!--房源照片-->
-    <view class="input-item input-item-full">
+   <!--<view class="input-item input-item-full">
 				<text class="input-item-label">房源图片</text>
 				 <view>
    <image style="width:70px; height: 70px; background-color: #eeeeee;"
           mode="{{item.mode}}"
           src="/image/hezu.png"></image>
 </view>
-				</view>
+				</view>--> 
     <!--发布-->
         <view class="btn-submit">
     <button class="btn-block btn-orange" form-type="submit" bindtap='onSubmit' >确认发布</button>
@@ -111,35 +111,37 @@
 		<view class="input-item">
 			<text class="input-item-label">整套面积:</text>
 			<view class="input-item-content">
-			 	<input type="text" auto-focus placeholder="请输入房屋总面积㎡"bindinput="inputName"></input>
+			 	<input type="text" auto-focus placeholder="请输入房屋总面积㎡"bindinput="inputArea" name="PublishHouse_Area"></input>
 			</view>
 		</view>
     <!-- 租金-->
 		<view class="input-item">
 			<text class="input-item-label">租金:</text>
 			<view class="input-item-content">
-				<input type="idcard" placeholder="请输入月租金"bindinput="inputPhone"></input>
+				<input type="idcard" placeholder="请输入月租金"bindinput="inputRentMoney" name="PublishHouse_RentMoney"></input>
 			</view>
       
 		</view>
     <!--房屋面积 -->
-    <view class="input-item">
-			<text class="input-item-label">房屋面积:</text>
+
+		 <view class="input-item">
+			<text class="input-item-label">楼层:</text>
 			<view class="input-item-content">
-			 	<input type="text" auto-focus placeholder="请输入房屋总面积㎡"bindinput="inputName"></input>
+				<input name='PublishHouse_Floor' type="idcard" placeholder="请输入层数"bindinput="inputFloor"></input>
 			</view>
 		</view>
+	
 <!--楼房类型 -->
       <view class="input-item">
 					<text class="input-item-label">楼房类型</text>
-				<picker name='BuildingType_ID' class="input-item-content" bindchange="bindPickerChange" data-pickername="{{BuildingType[hx_index].BuildingType_ID}}" value="{{BuildingType[hx_index].BuildingType_ID}}" range="{{BuildingType}}" range-key="{{'BuildingType_Name'}}" mode="selector" bindchange="bindPickerChange_hx">{{BuildingType[hx_index].BuildingType_Name}} 
+			  <picker name='BuildingType_ID' class="input-item-content" data-pickername="{{BuildingType[hx_index_2].BuildingType_ID}}" value="{{BuildingType[hx_index_2].BuildingType_ID}}" range="{{BuildingType}}" range-key="{{'BuildingType_Name'}}" mode="selector" bindchange="bindPickerChange_hx_2">{{BuildingType[hx_index_2].BuildingType_Name}} 
 					</picker>
 				</view>
     <!--房屋租金 -->
     <view class="input-item">
 			<text class="input-item-label">起租日期:</text>
 			<view class="input-item-content">
-			 	<input type="text" auto-focus placeholder="请输入:年/月/日" bindinput="inputName"></input>
+			 	<input type="text" auto-focus placeholder="请输入:年/月/日" bindinput="inputRentTimeBegin"name="PublishHouse_RentTimeBegin"></input>
 			</view>
 		</view>
         <!--房源图片 -->
@@ -147,14 +149,14 @@
 			
 	</view>
 
-<view>
+<!--<view>
    <image style="width:70px; height: 70px; background-color: #eeeeee;"
           mode="{{item.mode}}"
           src="{{}}"></image>
-</view>
+</view>-->
    <!--发布-->
         <view class="btn-submit">
-    <button class="btn-block btn-orange" form-type="submit" >确认发布</button>
+    <button class="btn-block btn-orange" form-type="submit"  bindtap='onSubmit1'>确认发布</button>
 	       </view>
 </view>
    </form>
