--- a/WxDwelling/pages/userpage/userpage.wxml
+++ b/WxDwelling/pages/userpage/userpage.wxml
@@ -38,7 +38,7 @@
         <image src=""/>关于我们
         <text class="jump">〉</text>
     </view>
-    <view class="item" bindtap="order">
+    <view class="item" bindtap="order1">
         <image src=""/>请联系蜗居
         <text class="jump">〉</text>
     </view>
